# memefreak

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml
clients/: dexscreener.py  pump_portal.py  raydium.py  telegram.py
