[tool.poetry]
name = "memefreak"
version = "0.1.0"
description = ""
authors = ["sp33dfre4k <speedfreak@skiff.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
memefreak = "main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"