[tool.poetry]
name = "memefreak"
version = "0.1.0"
description = ""
authors = ["sp33dfre4k <speedfreak@skiff.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
memefreak = "main:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"